# goa-rpc

./: .gitignore  .gitmodules  CMakeLists.txt  makefile  readme.md
examples/arithmetic/: ArithmeticClient.cc  ArithmeticService.cc  CMakeLists.txt
image&&uml/: .$rpc调用过程.drawio.bkp  .$rpc调用过程.drawio.dtmp  rpc调用过程.drawio
image_uml/: rpc调用过程.drawio
src/: CMakeLists.txt
src/client/: BaseClient.cc  BaseClient.hpp
src/server/: BaseServer.cc  BaseServer.hpp  Procedure.cc  Procedure.hpp  RpcServer.cc  RpcServer.hpp  RpcService.hpp
src/stub/: CMakeLists.txt  ClientStubGenerator.cc  ClientStubGenerator.hpp  ServiceStubGenerator.cc  ServiceStubGenerator.hpp  StubGenerator.cc  StubGenerator.hpp  main.cc
src/utils/: Exception.hpp  RpcError.hpp  utils.hpp
